--- a/src/day1/index.html
+++ b/src/day1/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body bgcolor="#ca9845">
-    <h1>Satya</h1>
+    <h1>hello world</h1>
+    <h2>Satya</h2>
+    <h3>Rahul</h3>
+    <h4>Shivi</h4>
+    <h5>Siddhan</h5>
+    <h6>Namaskaram</h6>
 </body>
 
 </html>
