--- a/src/day5/tags.html
+++ b/src/day5/tags.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-  <b>This is HTML tags</b> 
-  <strong>Trying on different styles</strong> 
-  <i>this is italic style</i>
-  <em>This is emphasis</em>
-  <mark>This is to highlight text</mark>
-  <del>This is to strikedown </del>
+  <b>This is HTML tags</b> <br>
+  <strong>Trying on different styles</strong> <br>
+  <i>this is italic style</i><br>
+  <em>This is emphasis</em><br>
+  <mark>This is to highlight text</mark><br>
+  <del>This is to strikedown </del><br>
   <small>This text will be displayed in small</small>
   <sub>100</sub>
   <sup>H2o</sup>
-  <ins>This is for inserting  text</ins>
+  <ins>This is for inserting  text</ins><br>
 </body>
 </html>
